--- a/src/app/components/products/product-form/product-form.html
+++ b/src/app/components/products/product-form/product-form.html
@@ -152,8 +152,8 @@
               <p-inputNumber
                 formControlName="costPrice"
                 mode="currency"
-                currency="USD"
-                locale="en-US"
+                currency="PKR"
+                locale="en-PK"
                 class="w-full"
                 [min]="0.01"
               />
@@ -172,8 +172,8 @@
               <p-inputNumber
                 formControlName="mrp"
                 mode="currency"
-                currency="USD"
-                locale="en-US"
+                currency="PKR"
+                locale="en-PK"
                 class="w-full"
                 [min]="0.01"
               />
@@ -192,8 +192,8 @@
               <p-inputNumber
                 formControlName="minSalePrice"
                 mode="currency"
-                currency="USD"
-                locale="en-US"
+                currency="PKR"
+                locale="en-PK"
                 class="w-full"
                 [min]="0.01"
               />
